<resources>
    <string name="app_name">TaskManager</string>
    <string name="menu_tasks_string">Tasks</string>
    <string name="menu_add_tasks">Add Task</string>
    <string name="due_date_hint">Due Date</string>
    <string name="description_hint">Description</string>
    <string name="save_task_hint">Save Task</string>
    <string name="title_hint">Title</string>
    <string name="title_image_of_app_reading_task_manager">Title Image of App reading Task Manager</string>
    <string name="menu_edit_task">Edit Task</string>
    <string name="sort_tasks">Sort Tasks</string>
</resources>